# cmirror

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: mirrors.json
src/sources/: conda.rs  mod.rs  uv.rs
